deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puzzle-deployment
  labels:
    app: puzzle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: puzzle
  template:
    metadata:
      labels:
        app: puzzle
    spec:
      containers:
      - name: puzzle
        image: linogaliana/application-correction:latest
        ports:
        - containerPort: 5000
