deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzle-service
spec:
  selector:
    app: puzzle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
